# min_able_structure

./: .gitignore
back_end/: a.py  get_env.py  pyproject.toml
back_end/langchain/src1-1/app/: api_agent.py
back_end/langchain/src1-1/policies/: tool_policy.py
back_end/langchain/src1-2/tools/: mcp_client.py
back_end/langchain/src2_Repo7/: REMADE.md
back_end/langchain_app/: pyproject.toml
back_end/llamaIndex/: .gitignore  get_env.py  pyproject.toml
back_end/llamaIndex_app/: pyproject.toml
back_end/mcp-server/: search_mcp.py  server.py
back_end/mcp_server/: pyproject.toml
back_end/src1-1/agents/: graph.py  state.py
back_end/src1-1/app/: main.py
back_end/src1-2/app/: api_agent.py
back_end/src1-2/models/: llm.py
back_end/src1-2/tools/: rag_tool.py  ragflow_tool.py
back_end/src1-3/agents/: graph.py  state.py
back_end/src1-3/app/: main.py
back_end/src1-3/models/: llm.py
back_end/src1-3/policies/: tool_policy.py
back_end/src1-3/storage/: agent_audit.jsonl  audit_reader.py  audit_writer.py  models.py  replay_runner.py
back_end/src2_Repo1/agent/: nodes.py  state.py
back_end/src2_Repo2/agent/: nodes.py
back_end/src2_Repo2/integrations/: ragflow.py
back_end/src2_Repo3/agent/: graph.py
back_end/src2_Repo3/app/: router.py
back_end/src2_Repo3/infra/: agent_db.db
back_end/src2_Repo4/agent/: state.py
back_end/src2_Repo4/app/: main.py
back_end/src2_Repo4/infra/: agent_db.db
back_end/src2_Repo5/agent/: state.py
back_end/src2_Repo5/app/: main.py  router.py  router_human.py
back_end/src2_Repo5/infra/: agent_db.db  db.py  models.py
back_end/src2_Repo6/app/: main.py  router_human.py
back_end/src2_Repo6/infra/: delete_state.py  models.py  recorder.py
back_end/src2_Repo6/tools/: mcp_client.py
back_end/src2_Repo7/app/: router.py
back_end/src2_Repo7/infra/: agent_db.db  calculate_cost.py  models.py
back_end/src2_Repo8/agent/: render_prompt.py
back_end/src2_Repo8/app/: main.py  router_billing.py  router_human.py
back_end/src2_Repo8/infra/: agent_db.db  check_policies.py  check_quota.py  models.py  recorder.py
(+79 files in other folders)
