[project]
name = "min-able-structure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "fastapi>=0.127.0",
    "fastmcp>=2.14.1",
    "langchain-core>=1.2.4",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "ragflow-sdk>=0.13.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
